# freebusy-pdf

./: .gitattributes  README.md  make-calendar-from-freebusy  range-query  vevent.ics.template
visualize/: .gitignore  Makefile  Makefile.am  README.md  configure.ac
visualize/src/: busy.c  busy.h  drawDays.c  drawDays.h  main.c  main.cpp  margins.cpp.in  measurements.c  measurements.h  settings.c  settings.h  specification.c  specification.h  strokeHelper.c.in  text.c  text.h
