bin_PROGRAMS = freebusy

freebusy_SOURCES = src/busy.c src/text.c src/measurements.h src/strokeHelper.c.in src/measurements.c src/drawDays.h src/drawDays.c src/text.h src/specification.h src/settings.c src/main.cpp src/settings.h src/specification.c src/busy.h

freebusy_CPPFLAGS = -Isrc

freebusy_CFLAGS = -Isrc

freebusy_LDFLAGS = -lcairo -lical

dist_doc_DATA = README.md
